home 사진 추가함

--- a/working/asset/css/layout/_home.scss
+++ b/working/asset/css/layout/_home.scss
@@ -1,10 +1,10 @@
-.home{
+.home {
     background-color: #000;
     overflow: hidden;
 
-    
-    
-    &_container{
+
+
+    &_container {
         position: relative;
         height: calc(100vh - $header-height);
         grid-template-rows: repeat(2, max-content);
@@ -13,54 +13,61 @@
 
     }
 
-    &_data{
+    &_data {
         border-left: 4px solid $first-color;
         // color: $first-color-lighten;
         padding-left: 1.5rem;
         z-index: $z-tooltip;
     }
 
-    &_name{
+    &_name {
         font-size: $biggest-font-size;
     }
 
-    &_greeting, &_profession{
+    &_greeting,
+    &_profession {
         display: block;
         font-weight: $font-bold;
     }
 
-    &_greeting{
-        font-size:$small-font-size;
+    &_greeting {
+        font-size: $small-font-size;
     }
 
-    &_professional{
+    &_professional {
         font-size: $normal-font-size;
         margin-bottom: $mb-3;
     }
 
-    &_img{
+    &_img {
         position: absolute;
         right: 0;
         bottom: 0;
+        width: 480px;
 
-        img{
-            width: 240px;
-        }
+        img {}
     }
 
-    &_social{
+    &_social {
         display: flex;
         flex-direction: column;
     }
 
-    &_social-icon{
+    &_social-icon {
         width: max-content;
         font-weight: $h2-font-size;
         margin-bottom: $mb-2;
         // color: $first-color-lighten;
 
-        &:hover{
+        &:hover {
             color: darken($first-color-dark, 25);
         }
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    .home_img {
+        width: 240px;
     }
 }
