toy projects항목 추가

--- a/working/asset/css/layout/_activities.scss
+++ b/working/asset/css/layout/_activities.scss
@@ -9,6 +9,10 @@
         }
     }
 
+    &_description {
+        text-align: justify;
+    }
+
     &_content {
         display: grid;
         background-color: $first-color-dark;
