--- a/working/asset/css/main.scss
+++ b/working/asset/css/main.scss
@@ -48,6 +48,7 @@
         display: block;
         font-size: $small-font-size;
         font-weight: $font-semi-bold;
+        margin-top: $mb-3;
     }
 }
 
