--- a/working/asset/css/layout/_skills.scss
+++ b/working/asset/css/layout/_skills.scss
@@ -53,7 +53,8 @@
 
 
     &-content {
-        border-left: #f2e6ce solid 2.5px;
+        // border-left: #f2e6ce solid 2.5px;
+        border-left: $first-color solid 2.5px;
         padding: 15px;
         margin-bottom: 20px;
     }
