--- a/working/asset/css/main.css
+++ b/working/asset/css/main.css
@@ -324,7 +324,7 @@ img {
   margin-right: 10%;
 }
 .skills-content {
-  border-left: #f2e6ce solid 2.5px;
+  border-left: #815B5B solid 2.5px;
   padding: 15px;
   margin-bottom: 20px;
 }
